Versie 9
========

nachfeld toegevoegd

Versie 6
========

Compound parts _cp zonder DIM.


Versie 5
========

Het vorfeld werd eerst alleen maar bepaald als het begin van een smain.
Maar een whq heeft ook een vorfeld hebben.

Oude definitie:

match (x:nw)
where x.sentid + ' ' + x.id in (
    select sid
    from (

        match (n:node{cat:'smain'})-[:rel{rel:'hd'}]->(fin:word)
        match (n)-[:rel*1..{primary:true}]->(topic:nw)-[rel:rel*0..1]->(htopic:nw)
        where ( htopic.lemma is not null
                and htopic.begin < fin.begin
                and ( length(rel) = 0
                      or rel[0].rel in ['hd','cmp','crd']
                    )
              )
              or
              ( topic.begin < fin.begin
                and
                topic.end <= fin.begin
              )
        return topic.sentid + ' ' + topic.id as sid, n.id as nid

        except

        match (n:node{cat:'smain'})-[:rel{rel:'hd'}]->(fin:word)
        match (n)-[:rel*1..{primary:true}]->(topic:nw)-[rel:rel*0..1]->(htopic:nw)
        where ( htopic.lemma is not null
                and htopic.begin < fin.begin
                and ( length(rel) = 0
                      or rel[0].rel in ['hd','cmp','crd']
                    )
              )
              or
              ( topic.begin < fin.begin
                and
                topic.end <= fin.begin
              )
        match (topic)<-[:rel*1..]-(nt:node)<-[:rel*1..]-(n)
        match (nt)-[relt:rel*0..1]->(hnt:nw)
        where ( hnt.lemma is not null
                and hnt.begin < fin.begin
                and ( length(relt) = 0
                      or relt[0].rel in ['hd','cmp','crd']
                    )
              )
              or
              ( nt.begin < fin.begin
                and
                nt.end <= fin.begin
              )
        return topic.sentid + ' ' + topic.id as sid, n.id as nid

    ) as foo
)
set x._vorfeld = true;


Nieuwe definitie:
