@@ -1,3 +1,3 @@
 package main
 
-const VERSION = 9
+const VERSION = 10
