@@ -8,7 +8,7 @@ require (
 	github.com/pebbe/compactcorpus v1.0.1
 	github.com/pebbe/dbxml v1.3.1
 	github.com/pebbe/util v0.9.0
-	github.com/rug-compling/alpinods v1.12.4
-	github.com/rug-compling/alud/v2 v2.8.1
+	github.com/rug-compling/alpinods v1.13.1
+	github.com/rug-compling/alud/v2 v2.8.4
 	github.com/yuin/goldmark v1.3.5
 )
